--- a/index.html
+++ b/index.html
@@ -2,5 +2,13 @@
 <head><head>
 <body>
   <h2>Welcome to my site</h2>
+  <table>
+    <tr>
+      <td>name</td><td>address</td>
+    </tr>
+    <tr>
+      <td>aziz</td></td>Hse No 1</td>
+    </tr>
+  </table>
 </body>
 </html>
